# lingo

./: .env.example  .gitignore  .truthguard.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/grammar/: README.md  grammar-01.json  grammar-02.json  grammar-03.json  grammar-04.json  grammar-05.json  grammar-06.json  grammar-07.json  grammar-08.json  grammar-09.json  grammar-10.json  grammar-11.json  grammar-12.json  grammar-13.json  grammar-14.json  grammar-15.json  grammar-16.json  grammar-17.json  grammar-18.json  grammar-19.json  grammar-20.json
data/practice/: README.md  scenario-01.json  scenario-02.json  scenario-03.json  scenario-04.json  scenario-05.json  scenario-06.json  scenario-07.json  scenario-08.json  scenario-09.json  scenario-10.json
data/vocabulary/: README.md  vocab-500.tsv  vocab-extended.tsv
docs/: CHANGING_LANGUAGE.md
src/lingo/: __main__.py  config.py
src/lingo/bot/: main.py  storage.py
src/lingo/bot/handlers/: commands.py  flashcards.py  lessons.py  menu.py  onboarding.py  practice.py  quiz.py  reminders.py  stats.py
src/lingo/content/: grammar_loader.py  practice_scenarios.py  seed_vocabulary.py  vocabulary_loader.py
src/lingo/gamification/: achievement_manager.py  achievements_definitions.py  level_manager.py
src/lingo/memory/: categories.py  database.py  schema.sql
src/lingo/reminders/: __init__.py  run_once.py
src/lingo/services/: claude_service.py  codex_service.py  srs.py
test/: test_database_schema.py  test_flashcards_repos.py  test_grammar_loader.py  test_srs_engine.py
(+9 files in other folders)
