[project]
name = "lingo"
version = "0.1.0"
description = "Indonesian language tutor Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.0",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings",
  "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lingo"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

